--- a/2018_nips_vigil/main.tex
+++ b/2018_nips_vigil/main.tex
@@ -49,7 +49,7 @@
 \newcommand{\mem}{\mathbf{m}}
 \newcommand{\rr}{\mathbf{r}}
 
-\title{On the performance of the MAC model}
+\title{On transfer learning using a MAC model variant}
 
 % The \author macro works with any number of authors. There are two
 % commands used to separate the names and addresses of multiple
@@ -94,7 +94,7 @@
 \maketitle
 
 \begin{abstract}
-We propose a simplified version of the MAC model (Hudson and Manning, CVPR 2018) with a new set of equations to improve training performances. We also test the performance of the MAC model on a novel task, the CLEVR CoGenT dataset. This task is designed to test  generalization and transfer learning abilities. We show how MAC and our simplified version of MAC perform on CLEVR CoGenT and compare them to other baselines. Finally we examine the model failures, and show that MAC sometimes struggles to differentiate real concepts like objects attributes. 
+We introduce a variant of the MAC model (Hudson and Manning, CVPR 2018) with a simplified set of equations that achieves comparable accuracy, while training faster. We evaluate both models on CLEVR and CoGenT, and show that, transfer learning with fine-tuning results in a 15 point increase in accuracy, matching the state of the art. Finally, in contrast, we demonstrate that improper fine-tuning can actually reduce a model's accuracy as well.
 \end{abstract}
 \input{introduction}
 \input{mac}
