Last fixes + list of authors

--- a/2018_nips_vigil/experiments.tex
+++ b/2018_nips_vigil/experiments.tex
@@ -19,7 +19,7 @@ We used NVIDIA's GeForce GTX TITAN X GPUs. We followed the implementation detail
 		\toprule
 		\multirow{2}{*}{Model} & \multicolumn{3}{c}{Training} &  \multicolumn{2}{c}{Fine-tuning} & \multicolumn{2}{c}{Test} & \multirow{2}{*}{Row} \\
 		\cmidrule{2-4} \cmidrule{5-6} \cmidrule{7-8} 
-		Dataset                & Time [h:m] & Acc [\%]          & Dataset & Acc [\%]  & Dataset & Acc [\%] & \\
+		& Dataset                & Time [h:m] & Acc [\%]          & Dataset & Acc [\%]  & Dataset & Acc [\%] & \\
 		\midrule
 		MAC & CLEVR  & 30:52  & 96.70 & --   & --  & CLEVR    & 96.17         & (a) \\
 		\cmidrule{1-8}
