--- a/2018_nips_vigil/appendix.tex
+++ b/2018_nips_vigil/appendix.tex
@@ -122,6 +122,7 @@ In \tableref{tab:results_full} we present the full comparison between MAC and S-
 	\label{tab:results_full}
 \end{table}
 
+ \newpage
 \section{Comparison of generalization capabilities}
 
 In this section we present comparison of our results on generalization capabilities with selected state-of-the-art models.
@@ -236,6 +237,7 @@ When testing the model on CoGenT B, we used the whole validation set.
 In the experiments when we were using Validation B for fine-tuning, we did the analogical operations.
 Besides that, as we were using validation sets for testing, we also splitted the training set and used 90\% for training and the remaining 10\% for validation during training.
 
+ \newpage
 \section{Illustration of failures of MAC on CLEVR}
 Following the evaluation of MAC on CoGenT-B, we built a tool which helped us visualizing the attention of the model over the question words and the image, and thus provide insight on some cases of failure.
 
@@ -251,7 +253,7 @@ Following the evaluation of MAC on CoGenT-B, we built a tool which helped us vis
 	\label{fig:fail_mac_shape}
 \end{figure}
 
-\begin{figure}[]
+\begin{figure}[htbp]
 	\centering
 	\includegraphics[width=\textwidth]{img/fail_mac_cogent_b_color.png}
 	\caption{The question reads as: \textit{There is a tiny block behind the rubber thing that is right if the small brown rubber cylinder that is in front of the yellow metal cylinder; what color is it?}}
