--- a/2018_nips_vigil/introduction.tex
+++ b/2018_nips_vigil/introduction.tex
@@ -1,14 +1,15 @@
 \section{Introduction}
 Reasoning over visual inputs is a fundamental characteristic of human intelligence.
-Reproducing this ability with artificial systems is a challenge that requires learning relations and compositionality~\citep{hu2017learning, johnson2017inferring}. The Visual Question Answering (VQA)~\citep{antol2015vqa,malinowski2014towards,wu2017visual} task has been tailored to benchmark this type of reasoning, combining natural language processing and visual recognition.
+Reproducing this ability with artificial systems is a challenge that requires learning relations and compositionality~\cite{hu2017learning, johnson2017inferring}. The Visual Question Answering (VQA)~\cite{antol2015vqa,malinowski2014towards,wu2017visual} task has been tailored to benchmark this type of reasoning, combining natural language processing and visual recognition.
 
 Many approaches have been explored, such as modular networks, that combine modules coming from a predefined collection \cite{andreas2016learning,johnson2017inferring, mascharka2018transparency}. Attention mechanisms (\cite{bahdanau2014neural}, \cite{xu2015show}) are also used to guide the focus of the system over the image and the question words.
 
-Several VQA datasets have been proposed (e.g. DAQUAR~\citep{malinowski2014multi}, VQA~\citep{antol2015vqa}); nonetheless, these datasets contain several biases (e.g. unbalanced questions or answers) that are often exploited by systems during learning~\citep{goyal2017making}.
-The CLEVR dataset~\citep{johnson2017clevr} was designed to address these issues. The synthetic nature of its images \& questions enables detailed analysis of visual reasoning, and allows for variations, to test a particular ability such as generalization or transfer learning. One variation of CLEVR, called CoGenT (Compositional Generalization Test), measures whether models learn separate representations for color and shape instead of memorizing all possible combinations.
+Several VQA datasets have been proposed (e.g. DAQUAR~\cite{malinowski2014multi}, VQA~\cite{antol2015vqa}); nonetheless, these datasets contain several biases (e.g. unbalanced questions or answers) that are often exploited by systems during learning~\cite{goyal2017making}.
+The CLEVR dataset~\cite{johnson2017clevr} was designed to address these issues. The synthetic nature of its images \& questions enables detailed analysis of visual reasoning, and allows for variations, to test a particular ability such as generalization or transfer learning. One variation of CLEVR, called CoGenT (Compositional Generalization Test), measures whether models learn separate representations for color and shape instead of memorizing all possible combinations. 
+For details, see Appendix~A (all appendices in supplementary material).
 
 
-One of the most recent exciting models aiming at solving VQA is called Memory, Attention, and Composition (MAC)~\citep{hudson2018compositional}, which performs a sequence of attention-based reasoning operations. 
+One of the most recent exciting models aiming at solving VQA is called Memory, Attention, and Composition (MAC)~\cite{hudson2018compositional}, which performs a sequence of attention-based reasoning operations. 
 though the performance of MAC has been proven, several questions arise:
 Does the model really learn relations between objects? 
 How does the model represent these relations in its reasoning steps? 
