--- a/2018_nips_vigil/main.tex
+++ b/2018_nips_vigil/main.tex
@@ -49,7 +49,7 @@
 \newcommand{\mem}{\mathbf{m}}
 \newcommand{\rr}{\mathbf{r}}
 
-\title{On transfer learning using a MAC model variant}
+\title{On transfer learning using a MAC model variant: supplementary material}
 
 % The \author macro works with any number of authors. There are two
 % commands used to separate the names and addresses of multiple
@@ -61,38 +61,21 @@
 % on the second line, try using \AND instead of \And before the third
 % author name.
 
-\author{}
-%\author{
-%  MI-Prometheus\thanks{%
-%  It's scary --- \href{https://www.imdb.com/title/tt1446714/}{and it's back!}} \\
-%  %% examples of more authors
-%  %% \And
-%  %% Coauthor \\
-%  %% Affiliation \\
-%  %% Address \\
-%  %% \texttt{email} \\
-%  %% \AND
-%  %% Coauthor \\
-%  %% Affiliation \\
-%  %% Address \\
-%  %% \texttt{email} \\
-%  %% \And
-%  %% Coauthor \\
-%  %% Affiliation \\
-%  %% Address \\
-%  %% \texttt{email} \\
-%  %% \And
-%  %% Coauthor \\
-%  %% Affiliation \\
-%  %% Address \\
-%  %% \texttt{email} \\
-%}
+\author{
+	\textbf{\null\hfill Vincent Marois \hfill T.S. Jayram \hfill Vincent Albouy  \hfill\null}\\
+	\textbf{\null\hfill Tomasz Kornuta \hfill Younes Bouhadjar \hfill Ahmet S. Ozcan \hfill\null}\\
+	IBM Research AI, Almaden Research Center, San Jose, USA\\
+	\texttt{\{vmarois,jayram,tkornut,byounes,asozcan\}@us.ibm.com}\\
+	\texttt{\{vincent.albouy\}@ibm.com}\\
+}
 
 \begin{document}
 % \nipsfinalcopy is no longer used
 
 \maketitle
 
+% Little cheating to make our names fit:]
+\vskip -0.5cm
 \begin{abstract}
 We introduce a variant of the MAC model (Hudson and Manning, CVPR 2018) with a simplified set of equations that achieves comparable accuracy, while training faster. We evaluate both models on CLEVR and CoGenT, and show that, transfer learning with fine-tuning results in a 15 point increase in accuracy, matching the state of the art. Finally, in contrast, we demonstrate that improper fine-tuning can actually reduce a model's accuracy as well.
 \end{abstract}
@@ -102,10 +85,11 @@ We introduce a variant of the MAC model (Hudson and Manning, CVPR 2018) with a s
 \input{experiments}
 \input{conclusion}
 
+%\input{appendix}
+%
+%\newpage
 \bibliographystyle{alpha}
 \bibliography{vigil_bibliography}
 
-\newpage
-\input{appendix}
 
 \end{document}
