--- a/2018_nips_vigil/main.tex
+++ b/2018_nips_vigil/main.tex
@@ -49,7 +49,7 @@
 \newcommand{\mem}{\mathbf{m}}
 \newcommand{\rr}{\mathbf{r}}
 
-\title{On transfer learning using a MAC model variant: supplementary material}
+\title{On transfer learning using a MAC model variant}
 
 % The \author macro works with any number of authors. There are two
 % commands used to separate the names and addresses of multiple
@@ -85,11 +85,10 @@ We introduce a variant of the MAC model (Hudson and Manning, CVPR 2018) with a s
 \input{experiments}
 \input{conclusion}
 
-%\input{appendix}
-%
-%\newpage
+\newpage
 \bibliographystyle{alpha}
 \bibliography{vigil_bibliography}
 
-
+\newpage
+\input{appendix}
 \end{document}
