--- a/2018_nips_vigil/appendix.tex
+++ b/2018_nips_vigil/appendix.tex
@@ -125,14 +125,13 @@ In \tableref{tab:results_full} we present the full comparison between MAC and S-
  \newpage
 \section{Comparison of generalization capabilities}
 
-In this section we present comparison of our results on generalization capabilities with selected state-of-the-art models.
+In this section we present a comparison of our results on generalization capabilities with selected state-of-the-art models.
 In particular, we focused on three papers reporting state-of-the-art accuracies, i.e. PG+EE~\cite{johnson2017inferring} FiLM~\cite{perez2017film} and TbD~\cite{mascharka2018transparency}.
-Deeper analysis of the papers revealed that it is most probable that different authors used different sets for reporting the scores, which questions the correctness of the comparison.
-We find that the problems result from the fact that answers for the test sets aren't provided along with those sets, thus researchers started to use subsets of the validation set for testing. 
-The results of our research are presented in \tableref{tab:generalization_comparison}.
-In the table we had to shorten the names of the datasets.
-For example,  \textbf{A Test Full} means utilization of the whole \textbf{CoGenT Condition A Test set}, whereas  \textbf{B Valid 30k} indicates utilization of 30.000 samples from \textbf{CoGenT Condition B Validation set}.
-Question marks indicate that the paper does not provide enough information and those are the sets we assumed were used.
+Deeper analysis of the papers revealed that it is likely that different authors used different sets for reporting the scores, which questions the correctness of the comparison.
+We find that the problem results from the fact that ground truth answers for the test sets are not provided along with these sets; thus researchers started to use subsets of the validation set for testing. 
+The results of our research are presented in \tableref{tab:generalization_comparison}, where we shortened the names of the datasets.
+For instance, \textbf{A Test Full} means the use of the whole \textbf{CoGenT Condition A Test set}, whereas \textbf{B Valid 30k} indicates the use of 30.000 samples from \textbf{CoGenT Condition B Validation set}.
+Question marks indicate that the paper does not provide enough information; thus the indicated sets are the ones we assumed were used.
 
 \begin{table}[!h]
 	\centering
@@ -197,47 +196,45 @@ S-MAC &   &    &   &    & B Valid Full   &  78.71   \\
 
 
 \subsection{The PG+EE model and training methodology}
-The PG+EE (Program Generator and Execution Engine)~\cite{johnson2017inferring}  model is composed of two main modules:
+The PG+EE (Program Generator and Execution Engine)~\cite{johnson2017inferring} model is composed of two main modules:
 a Program Generator constructing an explicit, graph-like representation of the reasoning process, and an Execution Engine executing that program and producing an answer. 
 Both modules are implemented by neural networks, and were trained using a combination of backpropagation and REINFORCE~\cite{williams1992simple}.
 
 The authors inform that in the first step they trained their models on Condition A, and tested them on both Condition A and Condition B. 
 Next, they fine-tuned these models on Condition B using 3K images and 30K questions, and again tested on both conditions.
-Sadly, it is not clear what sets exactly they used for fine-tuning (as Condition B lacks the training set).
-One possibility, as they are the authors of CLEVR and CoGenT datasets, is that they actually generated the missing sets, but didn't share them publicly.
-Besides, as they posses answers for both CoGenT Condition A and Condition B test sets, we are almost sure that they reported the accuracies on both Condition A and Condition B test sets.
+Sadly, it is not clear which sets they used for fine-tuning (as Condition B lacks a training set).
+Being the authors of the CLEVR and CoGenT datasets, it is possible that they generated specific sets, but did not share them publicly. Additionally, as they own the ground truth answers for the test sets, it is very likely that they reported the accuracies on both Condition A and Condition B test sets.
 
 \subsection{The FiLM model and training methodology}
 
 Feature-wise Linear Modulation (in short, FiLM)~\cite{perez2017film} is an optional enhancement of a neural network model.
-The idea is to influence the behavior of existing layer(s) by introducing a feature-wise affine transformations that are conditioned on the input.
-A model composed of FiLM enhanced CNN and GRU achieved state-of-the-art results on both CLEVR and CoGenT, showing few percent of improvements over the PG+EE model.
+The idea is to influence the behavior of existing layer(s) by introducing feature-wise affine transformations which are conditioned on the input.
+A model composed of FiLM enhanced by a CNN and a GRU achieved state-of-the-art results on both CLEVR and CoGenT, showing improvement over the PG+EE model.
 
-The problem with the presented comparison is that the authors used different sets for collecting the results, i.e. in the paper they clearly indicate that accuracies reported for Condition B after fine-tuning were calculated on CoGenT Condition B Validation set, excluding the 30k samples that were used for that fine-tuning.
-This also suggests that they probably reported scores for CoGenT Condition A Validation set,
-whereas, as it was mentioned previously, the original PG+EE paper probably relied on test sets in both cases.
+A problem with the presented comparison is that the authors used different sets for collecting the results. In the paper, they indicate that the accuracy reported for Condition B after fine-tuning was obtained on the CoGenT Condition B Validation set, excluding the 30k samples that were used for fine-tuning.
+This suggests that they probably reported scores for Condition A on the validation set.
 
 
 \subsection{The TbD model and training methodology}
 
 The TbD (Transparency by Design) network was introduced in~\cite{mascharka2018transparency}.
 TbD is composed out of a set of visual reasoning primitives relying on attention transformations, allowing the model to perform reasoning by composing  attention masks.
-The authors compare the accuracy of their model while tested on CLEVR  with several existing models, including the previously mentioned PG + EE, CNN + GRU + FiLM and MAC, and once again indicate improvement.
+The authors compare the accuracy of their model tested on CLEVR, alongside with several existing models, including the previously mentioned PG + EE, CNN + GRU + FiLM and MAC, and show improvement.
 
-They also compare accuracy on CoGenT, by comparison with PG+EE.
-Despite the results show improvement, the description clearly lacks the most important information, i.e. which sets were used for training, fine-tuning and testing. 
-The only provided information indicate that they used 3k images and 30k questions from the CoGenT Condition B for fine-tuning of their model, but do not mention from which set they took the samples.
-However, as they mention that they were following~\cite{johnson2017inferring}, it is possible that they used the test sets.
+They also compare performance on CoGenT, comparing to PG+EE.
+Nonetheless, the description lacks an important information, which is the used sets for training, fine-tuning and testing. 
+They indicate that they used 3k images and 30k questions from the CoGenT Condition B for fine-tuning of their model, but do not mention from which set they took the samples.
+
 
 \subsection{Our MAC and S-MAC models and methodology}
 
 Due to the fact that test set targets for both CLEVR and CoGenT aren't publicly available, we decided to follow the approach proposed in~\cite{perez2017film} and split the CoGenT A Validation set.
 As a result we used 30k samples for fine-tuning and the remaining part for testing.
 When testing the model on CoGenT B, we used the whole validation set.
-In the experiments when we were using Validation B for fine-tuning, we did the analogical operations.
-Besides that, as we were using validation sets for testing, we also splitted the training set and used 90\% for training and the remaining 10\% for validation during training.
+In the experiments when we were using Validation B for fine-tuning, we did a similar operation.
+Aside, as we were using validation sets for testing, we also splitted the training set and used 90\% for training and the remaining 10\% for validation during training.
 
- \newpage
+\newpage
 \section{Illustration of failures of MAC on CLEVR}
 Following the evaluation of MAC on CoGenT-B, we built a tool which helped us visualizing the attention of the model over the question words and the image, and thus provide insight on some cases of failure.
 
